--- a/book.toml
+++ b/book.toml
@@ -3,7 +3,7 @@ authors = ["RM"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Mdbook Template"
+title = "Liberal Arts"
 [preprocessor.toc]
 command = "mdbook-toc"
 renderer = ["html"]
